CSS: Text overflow issue in `logout` text link in nav

--- a/css/main.less
+++ b/css/main.less
@@ -168,6 +168,11 @@ header {
 				padding-left: 15px;
 				text-decoration: none;
 			}
+			span {
+				@media @phone {
+					display: none;
+				}
+			}
 		}
 	}
 }
